Changelog for Hearthstone (v1.3.3-SNAPSHOT)

2013-05-19 19:38:53 +0100    update teleport command to tab complete offline players (James Richardson)
2013-05-19 19:31:24 +0100    update pom (James Richardson)
2013-03-26 02:22:22 +0000    return old README (James Richardson)
2013-03-26 01:44:48 +0000    added gh-pages as a submodule... again (James Richardson)
2013-03-26 01:43:40 +0000    let's try this again (James Richardson)
2013-03-26 01:43:04 +0000    moved submodule (James Richardson)
2013-03-26 01:40:21 +0000    clean up (James Richardson)
2013-03-26 01:35:47 +0000    added gh-pages as a submodule (James Richardson)
2013-03-26 01:08:39 +0000    first hearthstone website (James Richardson)
2013-03-25 23:31:29 +0000    various commits (James Richardson)
2013-03-25 23:06:29 +0000    clear navigation bar (James Richardson)
2013-03-25 23:05:36 +0000    update config options (James Richardson)
2013-03-25 23:04:34 +0000    add front page layout and changelog layout (James Richardson)
2013-03-25 23:04:20 +0000    various clean up (James Richardson)
2013-03-25 22:36:58 +0000    finally got anchors to line up when using sub menu links (James Richardson)
2013-03-25 21:44:35 +0000    remove additional call to scroll spy (James Richardson)
2013-03-25 21:08:06 +0000    merge spyscroll into default (James Richardson)
2013-03-25 20:47:16 +0000    add bootstrap .js (James Richardson)
2013-03-25 19:52:10 +0000    implement scrolling secondary navigation bar for pages (James Richardson)
2013-03-25 19:10:32 +0000    added fixed navbar at top of the page (James Richardson)
2013-03-25 19:00:55 +0000    add narrow container styling (James Richardson)
2013-03-25 18:55:57 +0000    replace standard swatch with cosmo (James Richardson)
2013-03-25 18:43:40 +0000    Initial commit (James Richardson)

v1.3.2
2013-03-24 18:33:38 +0000    remove stray debugging messages (James Richardson)
2013-03-24 18:29:19 +0000    missing colour code (James Richardson)