@@ -35,4 +35,5 @@ teleportcommand.no-home-set: &GREEN{0} &YELLOWdoes not have a home yet.
 teleportcommand.teleported-home: &GREENTeleported to the home belonging to &YELLOW{0}&GREEN.
 teleportcommand.can-only-teleport-to-own-home: &YELLOWYou may only teleport to your own home.
 teleportcommand.invalid-world: &REDThe world you specified does not exist!
-teleportcommand.world-must-be-loaded: &REDYou may only use worlds which are currently loaded.
+teleportcommand.world-must-be-loaded: &REDYou may only use worlds which are currently loaded
+teleportcommand.teleport-warmup: &YELLOWYou will teleport in &GREEN{0}; &YELLOWdo not move.
