@@ -1,5 +1,6 @@
 Changelog for Hearthstone (v1.3.3-SNAPSHOT)
 
+2013-05-19 19:59:58 +0100    added casting animation and sound when teleporting (James Richardson)
 2013-05-19 19:38:53 +0100    update teleport command to tab complete offline players (James Richardson)
 2013-05-19 19:31:24 +0100    update pom (James Richardson)
 2013-03-26 02:22:22 +0000    return old README (James Richardson)
